# ecstasy

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pylintrc  AGENTS.md  Dockerfile  Jenkinsfile  LICENSE  README.md  checks.sh  create_docs.py  device_connector.py  docker-compose.yaml  index.html  manage.py  mypy.ini  package-lock.json  package.json  pylintrc  pyproject.toml  requirements-dev.txt  requirements-mypy.txt  requirements-pylint.txt  requirements.txt  run.sh  vite.config.js  webpack.config.js
.github/workflows/: django.yml
accounting/: admin.py  api_tokens.py  apps.py  context_preprocessors.py  models.py  new_permissions.py  serializers.py  urls.py  views.py
accounting/migrations/: 0001_initial.py  0003_userapitoken_allowed_ips.py
accounting/templatetags/: account_perms.py
ansible/: README.md
ansible/inventory/: hosts
ansible/playbooks/: deploy-ecstasy.yaml
ansible/templates/: ecstasy-celery-service.j2  ecstasy-device-connector-service.j2  ecstasy-flower-service.j2  ecstasy-service.j2  nginx-conf.j2  sysconfig.env.j2
app_settings/: admin.py  apps.py  errors_views.py  lazy_settings.py  models.py
app_settings/migrations/: 0001_initial.py  0002_alter_logselasticstacksettings_query_lang.py  0003_vlantracerouteconfig_cache_timeout_and_more.py  0004_accessringsettings.py
apps/accounting/: admin.py  apps.py  serializers.py  views.py
apps/app_settings/: admin.py  apps.py  models.py  tasks.py  zabbix_config_cache.py
apps/check/: admin.py  apps.py  export_resources.py  logging.py  models.py  new_permissions.py  permissions.py  tasks.py
apps/discovery/: admin.py  apps.py  models.py  new_permissions.py  tasks.py
apps/gathering/: admin.py  apps.py  models.py  paginator.py  tasks.py
apps/gpon/: admin.py  apps.py  default_groups.py  export_resources.py  models.py  tasks.py
apps/maps/: admin.py  apps.py  models.py  new_permissions.py
apps/net_tools/: admin.py  apps.py  export_resources.py  models.py  new_permissions.py  tasks.py
apps/news/: admin.py  apps.py  context_preprocessors.py  models.py  services.py  signals.py
apps/notifications/: admin.py  apps.py  models.py  tasks.py  tests.py
apps/ring_manager/: admin.py  apps.py  models.py  ring_finder.py  solutions.py
check/: admin.py  apps.py  export.py  export_resources.py  forms.py  interfaces_collector.py  logger.py  logging.py  models.py  paginator.py  permissions.py  tasks.py  urls.py  views.py
check/api/: decorators.py  filters.py  permissions.py  serializers.py  urls.py  views.py
check/devicemanager/: __init__.py  dc.py  device.py  exceptions.py  snmp.py  zabbix_info_dataclasses.py
check/migrations/: 0001_initial.py  0002_devices_vendor.py  0003_authgroup_alter_devicegroup_table_and_more.py  0004_alter_authgroup_table.py  0005_bras_alter_authgroup_options_and_more.py  0006_profile.py  0007_remove_profile_id_alter_profile_user.py  0008_alter_devices_options_devices_snmp_community.py  0009_devices_protocol.py  0010_alter_devices_name_alter_devices_protocol.py  0011_alter_authgroup_options_alter_bras_options_and_more.py  0012_remove_devicegroup_user_profile_devices_groups.py  0013_authgroup_description_devicegroup_description_and_more.py  0014_alter_devices_model_alter_devices_vendor.py  0015_alter_devices_ip_alter_devices_model_and_more.py  0016_alter_authgroup_options_remove_devices_protocol_and_more.py  0017_alter_bras_ip.py  0018_usersactions_usersactions_logs_time_index.py  0019_alter_usersactions_device_alter_usersactions_user.py  0020_alter_usersactions_device.py  0021_logselasticstacksettings_alter_usersactions_options.py  0022_delete_logselasticstacksettings.py  0023_interfacescomments.py  0024_interfacescomments_datetime.py  0025_devicemedia.py  0026_alter_devicemedia_description.py  0027_profile_port_guard_pattern.py  0029_devices_active_devices_collect_configurations_and_more.py  0030_bras_connection_pool_size_and_more.py  0031_devices_collect_vlan_info.py  (+5 more)
devicemanager/: README.md  __init__.py  connection_ports.py  dc.py  device.py  exceptions.py  multifactory.py  session_control.py  session_spawner.py  snmp.py  zabbix_info_dataclasses.py
docs/: models.dot  web-console-schema.drawio  схема.drawio
ecstasy_project/: admin_filters.py  admin_theme.py  asgi.py  authentication.py  celery.py  decorators.py  error_handler.py  init_settings.py  protected_serve.py  settings.py  settings_utils.py  swagger.py  task.py  tests.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  webpack.config.js
frontend_v/: .dockerignore  .prettierignore  .prettierrc.json  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
gathering/: admin.py  apps.py  collectors.py  config_storage.py  ftp_collector.py  models.py  paginator.py  tasks.py  urls.py  views.py
gpon/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
maps/: admin.py  apps.py  models.py  new_permissions.py  protected_serve.py  urls.py  views.py
motr/: agg.py  apps.py  models.py  ring_manager.py  solutions.py
net_tools/: admin.py  apps.py  arp_find.py  finder.py  models.py  network.py  new_permissions.py  tasks.py  urls.py  views.py
news/: admin.py  context_preprocessors.py  models.py
nginx/: default.conf
notifications/: admin.py  apps.py  models.py  tasks.py
ring_manager/: admin.py  apps.py  models.py  new_permissions.py  ring_finder.py  ring_manager.py  solutions.py  urls.py  views.py
src/: App_access_ring.vue  App_description_search.html  App_description_search.vue  App_device_info.html  App_device_info.vue  App_devices_list.html  App_devices_list.vue  App_traceroute.html  App_traceroute.vue  App_transport_ring.vue  access_rings.js  api_request.js  device_info.js  devices_list.js  search_description.js  transport_ring.js
static/: admin.css
templates/: base.html  footer.html  global_news.html  home.html  icons.html  menu-icons.html  menu.html  pagination.html  swagger-ui.html
web-console/: .env.example  README.md  docker-compose.yaml
(+1068 files in other folders)
