[project]
name = "ecstasy"
version = "18.3.7"
description = "Ecstasy - Equipment Control System To Assist You - программа для управления сетевым оборудованием."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alive-progress>=3.3.0",
    "celery>=5.6.2",
    "certifi>=2026.1.4",
    "coreapi>=2.3.3",
    "cryptography>=46.0.3",
    "django>=5.2.10",
    "django-celery-beat>=2.8.1",
    "django-cors-headers>=4.9.0",
    "django-dbbackup>=5.1.2",
    "django-filter>=25.2",
    "django-import-export>=4.4.0",
    "django-jazzmin>=3.0.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "django-debug-toolbar>=6.2.0",
    "drf-orjson-renderer>=1.8.0",
    "drf-yasg>=1.21.14",
    "flask>=3.1.2",
    "flower>=2.0.1",
    "gevent>=25.9.1",
    "gunicorn>=23.0.0",
    "idna>=3.11",
    "jinja2>=3.1.6",
    "mysqlclient>=2.2.7",
    "openpyxl>=3.1.5",
    "orjson>=3.11.5",
    "paramiko==3.5.1",
    "pexpect>=4.9.0",
    "pillow>=12.1.0",
    "ping3>=4.0.8",
    "pysftp>=0.2.9",
    "pyvis==0.3.2",
    "pyyaml>=6.0.3",
    "pyzabbix>=1.3.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sqlparse>=0.5.5",
    "tabulate>=0.9.0",
    "textfsm>=2.1.0",
    "urllib3>=2.6.3",
    "xlwt>=1.3.0",
    "mozilla-django-oidc>=5.0.2",
]

[dependency-groups]
dev = [
    "black[d]>=26.1.0",
    "pdoc>=15.0.2",
    "pylint>=4.0.4",
    "pylint-django>=2.7.0",
    "celery-types>=0.24.0",
    "django-filter-stubs>=0.1.3",
    "django-stubs>=5.2.9",
    "djangorestframework-stubs>=3.16.7",
    "drf-yasg-stubs>=0.1.4",
    "mypy>=1.19.1",
    "types-markdown>=3.8.0.20250415",
    "types-pexpect>=4.9.0.20241208",
    "types-psycopg2>=2.9.21.20250318",
    "types-pygments>=2.19.0.20250305",
    "types-pysftp>=0.2.17.20241117",
    "types-tabulate>=0.9.0.20241207",
]

[tool.ruff]
line-length = 120
lint.extend-select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-return
    "RET",
    # flake8-raise
    "RSE",
    # isort
    "I",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
]
lint.ignore = [
    # Line too long
    "E501",
    # Functions with a high complexity
    "C901",
    # Use ternary operator instead of `if`-`else`-block
    "SIM108",
    # Module level import not at top of file
    "E402",
    # Trailing whitespace
    "W291",
    # Blank line contains whitespace
    "W293",
]

[tool.mypy]
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "ecstasy_project.settings"
