[project]
name = "ecstasy"
version = "19.0.0"
description = "Ecstasy - Equipment Control System To Assist You - программа для управления сетевым оборудованием."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alive-progress>=3.3.0",
    "celery>=5.6.3",
    "certifi>=2026.2.25",
    "coreapi>=2.3.3",
    "cryptography>=46.0.6",
    "django>=6.0.3",
    "django-celery-beat>=2.8.1",
    "django-cors-headers>=4.9.0",
    "django-dbbackup>=5.2.0",
    "django-filter>=25.2",
    "django-import-export>=4.4.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "django-debug-toolbar>=6.2.0",
    "drf-orjson-renderer>=1.8.0",
    "drf-yasg>=1.21.15",
    "flask>=3.1.3",
    "flower>=2.0.1",
    "gevent>=25.9.1",
    "gunicorn>=25.3.0",
    "idna>=3.11",
    "jinja2>=3.1.6",
    "mysqlclient>=2.2.8",
    "openpyxl>=3.1.5",
    "orjson>=3.11.8",
    "paramiko==3.5.1",
    "pexpect>=4.9.0",
    "pillow>=12.1.1",
    "ping3>=4.0.8",
    "pysftp>=0.2.9",
    "pyvis==0.3.2",
    "pyyaml>=6.0.3",
    "pyzabbix>=1.3.1",
    "redis>=7.4.0",
    "requests>=2.33.0",
    "sqlparse>=0.5.5",
    "tabulate>=0.10.0",
    "textfsm>=2.1.0",
    "urllib3>=2.6.3",
    "xlwt>=1.3.0",
    "mozilla-django-oidc>=5.0.2",
    "django-unfold>=0.87.0",
]

[dependency-groups]
dev = [
    "black[d]>=26.3.0",
    "pdoc>=15.0.2",
    "pylint>=4.0.5",
    "pylint-django>=2.7.0",
    "celery-types>=0.26.0",
    "django-filter-stubs>=0.1.3",
    "django-stubs>=6.0.2",
    "djangorestframework-stubs>=3.16.9",
    "drf-yasg-stubs>=0.1.4",
    "mypy>=1.20.0",
    "types-markdown>=3.10.2.20260211",
    "types-pexpect>=4.9.0.20260127",
    "types-psycopg2>=2.9.21.20260223",
    "types-pygments>=2.19.0.20251121",
    "types-pysftp>=0.2.17.20241117",
    "types-tabulate>=0.10.0.20260308",
    "types-requests>=2.33.0.20260327",
]

[tool.ruff]
line-length = 120
lint.extend-select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-return
    "RET",
    # flake8-raise
    "RSE",
    # isort
    "I",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
]
lint.ignore = [
    # Line too long
    "E501",
    # Functions with a high complexity
    "C901",
    # Use ternary operator instead of `if`-`else`-block
    "SIM108",
    # Module level import not at top of file
    "E402",
    # Trailing whitespace
    "W291",
    # Blank line contains whitespace
    "W293",
]

[tool.mypy]
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "ecstasy_project.settings"
