[project]
name = "ecstasy"
version = "20.0.8"
description = "Ecstasy - Equipment Control System To Assist You - программа для управления сетевым оборудованием."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alive-progress>=3.3.0",
    "celery>=5.6.3",
    "django>=6.0.6",
    "django-celery-beat>=2.8.1",
    "django-cors-headers>=4.9.0",
    "django-dbbackup>=5.3.0",
    "django-filter>=25.2",
    "django-import-export>=4.4.1",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "django-debug-toolbar>=6.3.0",
    "drf-orjson-renderer>=1.8.0",
    "drf-yasg>=1.21.15",
    "flask>=3.1.3",
    "flower>=2.0.1",
    "gevent>=26.5.0",
    "gunicorn>=26.0.0",
    "jinja2>=3.1.6",
    "mysqlclient>=2.2.8",
    "openpyxl>=3.1.5",
    "orjson>=3.11.9",
    "paramiko>=5.0.0",
    "pexpect>=4.9.0",
    "pillow>=12.2.0",
    "ping3>=4.0.8",
    "pyyaml>=6.0.3",
    "pyzabbix>=1.3.1",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "tabulate>=0.10.0",
    "textfsm>=2.1.0",
    "urllib3>=2.7.0",
    "xlwt>=1.3.0",
    "mozilla-django-oidc>=5.0.2",
    "django-unfold>=0.97.1",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pdoc>=15.0.2",
    "pylint>=4.0.5",
    "pylint-django>=2.7.0",
    "celery-types>=0.26.0",
    "django-stubs>=6.0.5",
    "djangorestframework-stubs>=3.17.0",
    "drf-yasg-stubs>=0.1.4",
    "mypy>=2.1.0",
    "types-paramiko>=5.0.0.20260617",
    "types-pexpect>=4.9.0.20260518",
    "types-tabulate>=0.10.0.20260508",
    "types-requests>=2.33.0.20260518",
]

[tool.ruff]
line-length = 120
lint.extend-select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-return
    "RET",
    # flake8-raise
    "RSE",
    # isort
    "I",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
]
lint.ignore = [
    # Line too long
    "E501",
    # Functions with a high complexity
    "C901",
    # Use ternary operator instead of `if`-`else`-block
    "SIM108",
    # Module level import not at top of file
    "E402",
    # Trailing whitespace
    "W291",
    # Blank line contains whitespace
    "W293",
]

[tool.mypy]
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "ecstasy_project.settings"

[tool.black]
line-length = 110
target-version = ["py312"]
